<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/background_color"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/top" />

    <include
        layout="@layout/inc_loading_bar"
        android:visibility="gone" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    style="@style/Glo_Red"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="7dip"
                    android:paddingTop="7dip"
                    android:text="@string/glo_citychange_hot" />

                <ListView
                    android:id="@+id/glo_citychange_hot"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="6dip"
                    android:cacheColorHint="@color/transparent"
                    android:divider="@null"
                    android:listSelector="@color/transparent"
                    android:scrollbars="none" >
                </ListView>
            </LinearLayout>

            <TextView
                style="@style/Glo_Red"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="7dip"
                android:paddingTop="7dip"
                android:text="@string/glo_citychange_province" />

            <LinearLayout
                android:id="@+id/glo_citychange_footer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dip"
                android:background="@drawable/glo_citychange_bg"
                android:clickable="true"
                android:gravity="center" >

                <TextView
                    android:id="@+id/glo_citychange_province"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dip"
                    android:text="@string/glo_citychange_more"
                    android:textColor="@color/black" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dip"
                    android:background="@drawable/glo_citychange_select"
                    android:contentDescription="@null" />
            </LinearLayout>
        </LinearLayout>

        <include layout="@layout/top_shadow" />
    </FrameLayout>

</LinearLayout>