<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/search_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <include layout="@layout/top" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:paddingBottom="3dip"
            android:paddingTop="3dip" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/search_input" >

                <EditText
                    android:id="@+id/road_search_edit"
                    style="@style/gray_b4b4b4.14sp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dip"
                    android:background="@android:color/transparent"
                    android:hint="@string/glo_road_search_hint"
                    android:imeOptions="actionSearch"
                    android:paddingBottom="10dip"
                    android:paddingLeft="5dip"
                    android:paddingTop="10dip"
                    android:singleLine="true"
                    android:textColorHint="@color/gray_b4b4b4" />
            </LinearLayout>

            <Button
                android:id="@+id/road_search_btn"
                style="@style/white_title.16sp"
                android:layout_width="80sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dip"
                android:background="@drawable/pink_button_selector"
                android:gravity="center"
                android:text="@string/glo_search" />
            <!-- android:background="@drawable/btn_letters_selector" -->
        </LinearLayout>

        <include layout="@layout/top_shadow" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <ListView
            android:id="@+id/road_search_lv"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/gray_city_bg"
            android:cacheColorHint="@android:color/transparent"
            android:divider="@drawable/list_line"
            android:fadingEdge="none"
            android:scrollbars="none" >
        </ListView>

        <LinearLayout
            android:id="@+id/no_search_data"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/background"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/glo_collect_normal" />

            <TextView
                style="@style/Glo_Gray_title.14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:text="@string/glo_no_search_data" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>