<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/play_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/top" />

    <TextView
        android:id="@+id/eye_name_to_full_sreen"
        style="@style/black_title.14sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/play_title"
        android:drawableRight="@drawable/road_fullsreen"
        android:gravity="center_vertical"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:singleLine="true" />

    <RelativeLayout
        android:id="@+id/video_layout"
        android:layout_width="fill_parent"
        android:layout_height="200dip" >

        <cn.ffcs.surfingscene.road.widget.GlPlayerSurfaceView
            android:id="@+id/surface_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <cn.ffcs.surfingscene.road.widget.NewGlPlayerSurfaceView
            android:id="@+id/new_surface_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />
        
        <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
            <ImageView 
                android:id="@+id/loading_image"
                android:layout_width="match_parent" android:layout_height="match_parent"
                android:background="@drawable/glo_loading_image"/>
            <TextView
	            android:id="@+id/play_press"
	            style="@style/white_title.14sp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentBottom="true"
	            android:layout_centerHorizontal="true"
	            android:text="@string/glo_loading" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/advert_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" 
            android:background="#000000">

            <TextView
                android:id="@+id/advert_time"
                style="@style/white_title.14sp"
                android:layout_width="wrap_content"
                android:layout_height="20dip"
                android:layout_alignParentRight="true"
                android:paddingRight="5dip" />

            <ImageView
                android:id="@+id/advert_image"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="20dip"
                android:scaleType="fitXY" />
            
            
        </RelativeLayout>

        <ImageView
            android:id="@+id/to_not_sreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="5dip"
            android:layout_marginRight="5dip"
            android:padding="10dip"
            android:src="@drawable/road_nor_sreen"
            android:visibility="gone" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/layout_des"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="@color/white"
        android:fadingEdge="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dip"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="10dip" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <ImageView
                    android:id="@+id/ad_image"
                    android:layout_width="fill_parent"
                    android:layout_height="140dip"
                    android:scaleType="fitXY"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/ad_text"
                    style="@style/Glo_Gray_title.16sp"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/white"
                    android:lineSpacingMultiplier="1.2"
                    android:visibility="gone" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="10dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" >

        <TextView
            android:id="@+id/cut_screen"
            style="@style/white_title.16sp"
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:layout_marginRight="10dip"
            android:layout_weight="1"
            android:background="@drawable/pink_button_selector"
            android:gravity="center"
            android:text="@string/glo_shoot_screen" />
        <!-- android:background="@drawable/btn_blue_selector" -->

        <TextView
            android:id="@+id/share_btn"
            style="@style/white_title.16sp"
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:layout_weight="1"
            android:background="@drawable/pink_button_selector"
            android:gravity="center"
            android:text="@string/glo_road_share" />
        <!-- android:background="@drawable/btn_blue_selector" -->
    </LinearLayout>

</LinearLayout>